Removing HTML comments and fixing white space issue in CSS instead

--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -312,7 +312,7 @@
         .stores-maps__filters__item {
           display: inline-block;
           vertical-align: middle;
-          @include to-rem(margin-right, $spacing-half);
+          @include to-rem(margin-right, $spacing-sixth);
 
           &:last-child {margin-right: 0;}
 
